// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — answer-format-scenarios > '5 × 10^6 with format "? × 10^?" → fra…' 1`] = `
"
###### 5 × 10^6 with format "? × 10^?" → fragment = 5 (mantissa) ######

target: {"answerFormat":"? \\\\times 10^?"}

========== COLLEGE (detailed) ==========
[0] On calcule
    │ @blue{5*10^6}
    │ = 5000000
"
`;

exports[`snapshot — answer-format-scenarios > '10^6 with format "10^?" → fragment = 6' 1`] = `
"
###### 10^6 with format "10^?" → fragment = 6 ######

target: {"answerFormat":"10^?"}

========== COLLEGE (detailed) ==========
[0] On calcule
    │ @blue{10^6}
    │ = 1000000
"
`;

exports[`snapshot — answer-format-scenarios > '√8 with format "?√?" — fragment extra…' 1`] = `
"
###### √8 with format "?√?" — fragment extraction skipped (template-mismatch) ######

target: {"answerFormat":"?\\\\sqrt{?}"}

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(8)}
    │ = 2sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — basic > '2 + 3 × 4 (priorité)' 1`] = `
"
###### 2 + 3 × 4 (priorité) ######

========== PRIMAIRE (detailed) ==========
[0] On multiplie 3 par 4
    │ 2+@blue{3*4}
    │ = 2+12
[1] On additionne 2 et 12
    │ @blue{2+12}
    │ = 14

========== COLLEGE (detailed) ==========
[0] Multiplication
    │ 2+@blue{3*4}
    │ = 2+12
[1] Addition
    │ @blue{2+12}
    │ = 14
"
`;

exports[`snapshot — basic > '2 + 3 × 4 + 5 × 6 (regroupement)' 1`] = `
"
###### 2 + 3 × 4 + 5 × 6 (regroupement) ######

========== PRIMAIRE (detailed) ==========
[0] On multiplie 3 par 4
    │ 2+@blue{3*4}+5*6
    │ = 2+12+5*6
[1] On additionne 2 et 12
    │ @blue{2+12}+5*6
    │ = 14+5*6
[2] On multiplie 5 par 6
    │ 14+@blue{5*6}
    │ = 14+30
[3] On additionne 14 et 30
    │ @blue{14+30}
    │ = 44

========== COLLEGE (detailed) ==========
[0] On effectue d'abord les multiplications
    │ @blue{2+3*4+5*6}
    │ = 2+12+30
    │ (En l'absence de parenthèses, les multiplications sont effectuées avant les additions et soustractions.)
[1] Addition
    │ @blue{2+12}+30
    │ = 14+30
[2] Addition
    │ @blue{14+30}
    │ = 44
"
`;

exports[`snapshot — basic > '2 + 3' 1`] = `
"
###### 2 + 3 ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 2 et 3
    │ @blue{2+3}
    │ = 5

========== COLLEGE (detailed) ==========
[0] Addition
    │ @blue{2+3}
    │ = 5
"
`;

exports[`snapshot — basic > '10 − 7 + 3' 1`] = `
"
###### 10 − 7 + 3 ######

========== PRIMAIRE (detailed) ==========
[0] On soustrait 7 de 10
    │ @blue{10-7}+3
    │ = 3+3
[1] On additionne 3 et 3
    │ @blue{3+3}
    │ = 6

========== COLLEGE (detailed) ==========
[0] Soustraction
    │ @blue{10-7}+3
    │ = 3+3
[1] Addition
    │ @blue{3+3}
    │ = 6
"
`;

exports[`snapshot — fractions > '(2/3) ÷ (5/7) (division)' 1`] = `
"
###### (2/3) ÷ (5/7) (division) ######

========== COLLEGE (detailed) ==========
[0] Diviser par une fraction, c'est multiplier par son inverse
    │ @blue{{2/3}/{5/7}}
    │ = 2/3*7/5
[1] On multiplie les numérateurs entre eux et les dénominateurs entre eux
    │ @blue{2/3*7/5}
    │ = 14/15
"
`;

exports[`snapshot — fractions > '1/3 + 1/6 (PGCD = 6)' 1`] = `
"
###### 1/3 + 1/6 (PGCD = 6) ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On additionne les numérateurs (même dénominateur)
    │ @blue{2/6+1/6}
    │ = 3/6
[2] On simplifie la fraction
    │ @blue{3/6}
    │ = 1/2
    │ (On divise numérateur et dénominateur par leur PGCD.)
"
`;

exports[`snapshot — fractions > '1/4 + 1/6 (PGCD = 12)' 1`] = `
"
###### 1/4 + 1/6 (PGCD = 12) ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On additionne les numérateurs (même dénominateur)
    │ @blue{3/12+2/12}
    │ = 5/12
"
`;

exports[`snapshot — fractions > '2/3 × 5/7 (multiplication)' 1`] = `
"
###### 2/3 × 5/7 (multiplication) ######

========== COLLEGE (detailed) ==========
[0] On multiplie les numérateurs entre eux et les dénominateurs entre eux
    │ @blue{2/3*5/7}
    │ = 10/21
"
`;

exports[`snapshot — fractions > '2/4 réduction stricte' 1`] = `
"
###### 2/4 réduction stricte ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On simplifie la fraction
    │ @blue{2/4}
    │ = 1/2
    │ (On divise numérateur et dénominateur par leur PGCD.)
"
`;

exports[`snapshot — radicals > '√2 × √3 → √6' 1`] = `
"
###### √2 × √3 → √6 ######

========== COLLEGE (detailed) ==========
[0] On multiplie les racines (la racine du produit)
    │ @blue{sqrt(2)*sqrt(3)}
    │ = sqrt(6)
    │ (Pour deux nombres positifs a et b, √a × √b = √(a × b). On extrait ensuite l'éventuel carré parfait.)
"
`;

exports[`snapshot — radicals > '√2 × √8 → 4 (collapse complet)' 1`] = `
"
###### √2 × √8 → 4 (collapse complet) ######

========== COLLEGE (detailed) ==========
[0] On multiplie les racines (la racine du produit)
    │ @blue{sqrt(2)*sqrt(8)}
    │ = 4
    │ (Pour deux nombres positifs a et b, √a × √b = √(a × b). On extrait ensuite l'éventuel carré parfait.)
"
`;

exports[`snapshot — radicals > '√8 → 2√2' 1`] = `
"
###### √8 → 2√2 ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(8)}
    │ = 2sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — radicals > '√18 → 3√2' 1`] = `
"
###### √18 → 3√2 ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(18)}
    │ = 3sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — radicals > '√45 → 3√5' 1`] = `
"
###### √45 → 3√5 ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(45)}
    │ = 3sqrt(5)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — scientific > '(3 × 10⁴) × (2 × 10⁻²) → 6 × 10²' 1`] = `
"
###### (3 × 10⁴) × (2 × 10⁻²) → 6 × 10² ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On multiplie les coefficients et on additionne les exposants
    │ @blue{3*10^4*2*10^{-2}}
    │ = 6*10^2
[1] On écrit la puissance comme un produit
    │ 6*@blue{10^2}
    │ = 6*10*10
[2] Multiplication
    │ 6*@blue{10*10}
    │ = 6*100
[3] Multiplication
    │ @blue{6*100}
    │ = 600
[4] On écrit en notation scientifique
    │ @blue{600}
    │ = 6*10^2
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;

exports[`snapshot — scientific > '(5 × 10³) × (4 × 10²) → 2 × 10⁶ (over…' 1`] = `
"
###### (5 × 10³) × (4 × 10²) → 2 × 10⁶ (overflow re-norm) ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On multiplie les coefficients et on additionne les exposants
    │ @blue{5*10^3*4*10^2}
    │ = 2*10^6
[1] On calcule
    │ @blue{2*10^6}
    │ = 2000000
[2] On écrit en notation scientifique
    │ @blue{2000000}
    │ = 2*10^6
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;

exports[`snapshot — scientific > '0.000037 → 3.7 × 10⁻⁵' 1`] = `
"
###### 0.000037 → 3.7 × 10⁻⁵ ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On calcule
    │ @blue{0.000037}
    │ = 37/1000000
"
`;

exports[`snapshot — scientific > '5 000 000 → 5 × 10⁶' 1`] = `
"
###### 5 000 000 → 5 × 10⁶ ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On écrit en notation scientifique
    │ @blue{5000000}
    │ = 5*10^6
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;

exports[`snapshot — target-form-scenarios > '1/3 + 1/6 + reduced-fraction strict →…' 1`] = `
"
###### 1/3 + 1/6 + reduced-fraction strict → 1/2 ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On additionne les numérateurs (même dénominateur)
    │ @blue{2/6+1/6}
    │ = 3/6
[2] On simplifie la fraction
    │ @blue{3/6}
    │ = 1/2
    │ (On divise numérateur et dénominateur par leur PGCD.)
"
`;

exports[`snapshot — target-form-scenarios > '1/3 + 1/6 sans target → 3/6 (non rédu…' 1`] = `
"
###### 1/3 + 1/6 sans target → 3/6 (non réduit) ######

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On additionne les numérateurs (même dénominateur)
    │ @blue{2/6+1/6}
    │ = 3/6
[2] On simplifie la fraction
    │ @blue{3/6}
    │ = 1/2
    │ (On divise numérateur et dénominateur par leur PGCD.)
"
`;

exports[`snapshot — target-form-scenarios > '5000000 + scientific target → 5 × 10⁶' 1`] = `
"
###### 5000000 + scientific target → 5 × 10⁶ ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On écrit en notation scientifique
    │ @blue{5000000}
    │ = 5*10^6
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;
